<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WakeUpNow</string>
    	
	<string name="game_none">None</string>
	<string name="game_random">Random Game</string>
    <string name="game_math">Calculation Game</string>
    <string name="game_match">Picture Pair Game</string>
    <string name="game_ttt">Tic Tac Toe Game</string>
    
    <string name="alarm_time">00 : 00</string>
	<string name="alarm_label">Alarm name</string>
	<string name="ringtone_none">None</string>
	<string name="day_sun">S</string>
	<string name="day_mon">M</string>
	<string name="day_tue">T</string>
	<string name="day_wed">W</string>
	<string name="day_thu">T</string>
	<string name="day_fri">F</string>
	<string name="day_sat">S</string>
    
    <string name="alert_ringtone">Please choose alarm tone</string>
    <string name="alert_game">Please choose game</string>
    
    <string name="details_name_label">Note : </string>
    <string name="details_alarm_name">Write somthing here</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
	<string name="details_sunday">Sunday</string>
	<string name="details_monday">Monday</string>
	<string name="details_tuesday">Tuesday</string>
	<string name="details_wednesday">Wednesday</string>
	<string name="details_thursday">Thursday</string>
	<string name="details_friday">Friday</string>
	<string name="details_saturday">Saturday</string>
	<string name="details_alarm_tone">Alarm Tone</string>
	<string name="details_alarm_tone_default">Select an alarm tone</string>
	<string name="details_alarm_vibrate">Vibrate</string>
	<string name="details_alarm_game">Game</string>
	<string name="details_alarm_game_default">Select a game to play when alarm</string>
	
	<string name="game_solved_label">Solved : </string>
	
	<string name="alarmscreen_title">Yeah!!!</string>
	<string name="alarmscreen_time">00:00</string>
	<string name="alarmscreen_name">Alarm name</string>
	<string name="alarmscreen_bttext">Stop</string>
	
	<string name="record_start">Start record</string>
	<string name="record_stop">Stop record</string>
	<string name="record_play">Start playing</string>
	<string name="record_calcel">Stop playing</string>
	<string name="record_ok">Choose this ringtone</string>
	
	<string name="ttt_status">Show status</string>
</resources>
