<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="16dp" >

	    <TextView
	        android:id="@+id/alarm_item_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:text="@string/alarm_time"
	        android:textSize="25sp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/alarm_item_name"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/alarm_item_time"
	        android:layout_marginLeft="10sp"
	        android:layout_marginRight="8sp"
	        android:layout_toLeftOf="@+id/alarm_item_toggle"
	        android:layout_toRightOf="@+id/alarm_item_time"
	        android:text="@string/alarm_label"
	        android:textSize="18sp" />

	    <TextView
	        android:id="@+id/alarm_item_sunday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/alarm_item_time"
	        android:layout_below="@+id/alarm_item_name"
	        android:layout_marginLeft="10sp"
	        android:text="@string/day_sun"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

	    <TextView
	        android:id="@+id/alarm_item_monday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/alarm_item_sunday"
	        android:layout_below="@+id/alarm_item_time"
	        android:layout_alignBaseline="@+id/alarm_item_sunday"
	        android:layout_marginLeft="4dp"
	        android:text="@string/day_mon"
	        android:textAppearance="?android:attr/textAppearanceSmall" /> 
	        
	    <TextView
	        android:id="@+id/alarm_item_tuesday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/alarm_item_monday"
	        android:layout_below="@+id/alarm_item_time"
	        android:layout_alignBaseline="@+id/alarm_item_sunday"
	        android:layout_marginLeft="4dp"
	        android:text="@string/day_tue"
	        android:textAppearance="?android:attr/textAppearanceSmall" /> 
	        
	    <TextView
	        android:id="@+id/alarm_item_wednesday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/alarm_item_tuesday"
	        android:layout_below="@+id/alarm_item_time"
	        android:layout_alignBaseline="@+id/alarm_item_sunday"
	        android:layout_marginLeft="4dp"
	        android:text="@string/day_wed"
	        android:textAppearance="?android:attr/textAppearanceSmall" /> 
	        
	    <TextView
	        android:id="@+id/alarm_item_thursday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/alarm_item_wednesday"
	        android:layout_below="@+id/alarm_item_time"
	        android:layout_alignBaseline="@+id/alarm_item_sunday"
	        android:layout_marginLeft="4dp"
	        android:text="@string/day_thu"
	        android:textAppearance="?android:attr/textAppearanceSmall" /> 
	        
	    <TextView
	        android:id="@+id/alarm_item_friday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/alarm_item_thursday"
	        android:layout_below="@+id/alarm_item_time"
	        android:layout_alignBaseline="@+id/alarm_item_sunday"
	        android:layout_marginLeft="4dp"
	        android:text="@string/day_fri"
	        android:textAppearance="?android:attr/textAppearanceSmall" /> 
	        
	    <TextView
	        android:id="@+id/alarm_item_saturday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/alarm_item_friday"
	        android:layout_below="@+id/alarm_item_time"
	        android:layout_alignBaseline="@+id/alarm_item_sunday"
	        android:layout_marginLeft="4dp"
	        android:text="@string/day_sat"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

	    <ToggleButton
	        android:id="@+id/alarm_item_toggle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true" />
	        
	</RelativeLayout>
   
</FrameLayout>
