<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgalarm" >

    <ImageView
        android:id="@+id/alarm_screen_title"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
       	android:src="@drawable/alarm_label" />

    <TextView
        android:id="@+id/alarm_screen_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarm_screen_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/alarmscreen_time"
        android:textSize="100sp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/alarm_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarm_screen_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/alarmscreen_name"
        android:textSize="30sp"
        android:textColor="@android:color/white" />
    
    <Button
        android:id="@+id/alarm_screen_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_red_dark"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/alarmscreen_bttext"
        android:textSize="38sp"
        android:textColor="@android:color/white" />

</RelativeLayout>
